# mytestrepo

./: README.md  pyproject.toml
.github/workflows/: mypublishworkflow.yml  mypublishworkflow.yml~
src/mytestrepo/: __init__.py
src/mytestrepo_uvpack/: __init__.py
