[project]
name = "mytestrepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arnuld-acog", email = "arnuld@aganitha.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "twine>=6.1.0",
]

[project.scripts]
mytestrepo = "mytestrepo:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
