[project]
name = "mytestrepo"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arnuld-acog", email = "arnuld@aganitha.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "pandas>=2.3.2",
]

[project.scripts]
mytestrepo = "mytestrepo:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
